1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Archiver.m ([Archiver_c -lispOut:]): Put cons
	(cons appKey objects) within loop over applications.

	* HDF5Object.m, defobj.h ([HDF5_c -storeAttributeName:value:]):
	New method (a parameterized storeTypeName:).
	([HDF5_c -storeTypeName:]): Use it.
	Call hdf5_not_available in both when HAVE_HDF5 undefined.

1999-01-14  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefClass.m ([CreatedClass_s -lispInCreate:], [CreatedClass_s
	-lispOut:deep:]): Use DSIZE.

	* defobj.h (DSIZE): New macro for sizing decimal scratch buffers.

	* HDF5Object.[hm], defobj.h (HDF5_c): Remove typeName and setter.  
	New method -storeTypeName:, which replaces internal function
	store_type_name.

	* Archiver.m (hdf5_create_app_group): Return application group 
	by reference.  Assert that mode exists.
	(hdf5_output_objects): Drop memberGroup when member serialization
	complete.
	([Archiver_c hdf5Out:]): Drop appGroup and modeGroup when 
	hdf5_output_objects has processed both shallow and deep requests
	for the app.

	* defobj.[hm] (hdf5_not_available): New function for raising an error
	any time a HDF5 feature is used but HDF5 not present in
	configuration.

	* Archiver.[hm], DefClass.h, DefObject.[hm], HDF5Object.[hm]:
	Don't ifdef out HDF5 support when HAVE_HDF5 not set, call
	hdf5_not_available instead.

1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* HDF5Object.[hm], defobj.h ([HDF5_c +createBegin:]): New method.
	createGroupFlag defaults to YES.

	* Archiver.m ([Archiver +createBegin:]): Set inhibitLoadFlag
	to YES if the environment variable SWARM_INHIBIT_ARCHIVER_LOAD
	exists.

	* defobj.m (initDefobj): Call setInhibitLoadFlag on Archiver with
	Arguments' inhibitArchiverLoadFlag value.

	* HDF5Object.m (store_type_name): New function.
	([HDF5_c -createEnd]): Use it.
	Don't create group unless createGroupFlag is set,
	otherwise set loc_id from parent.

	* HDF5Object.[hm], defobj.h (HDF5_c): New ivars typeName and